change background color to winning wrestler

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <body>
 
+    <div class="container" id="mainClock">
+        <h1 id="Timer">00:00</h1>
+    </div>
     <div class="container" id="individualClocks">
         <div class="container" id="individualClocksBox">
             <div class="d-inline" id="redColorBox">
@@ -24,15 +27,10 @@
                 <div id="greenColor"></div>
                 <h1 id="greenClock">00:00</h1>
             </div>
-
-
         </div>
-
-
     </div>
 
-    <div class="container" id="mainClock">
-        <h1 id="Timer">00:00</h1>
+    <div id="buttons">
         <button id="red" type="button" class="btn btn-default">Red</button>
         <button id="green" type="button" class="btn btn-default">Green</button>
         <button id="neutral" type="button" class="btn btn-default">Neutral</button>
